test/files/parser/errors/assign-string.otest
name = "Assign to string"
line = 2
character = 1
error = "Cannot assign a value to a string."

---

"test" = 0
